slide1 header is having issues, confused about how to add the slide 1 images 2 on each side overlapped

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,117 @@
-@import url('https://fonts.googleapis.com/css2?family=Gloock&display=swap');
+@import url(https://fonts.googleapis.com/css?family=Nunito);
 
-html{
-    font-family: 'Gloock', serif;
-    background: rgb(253, 254, 246);
+html {
+  height: 100%;
+  overflow: hidden;
 }
 
-.container {
-    text-align: center;
-  }
+body { 
+  margin:0;
+  padding:0;
+	perspective: 1px;
+	transform-style: preserve-3d;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  font-family: Nunito;
+}
+
+h1 {
+   font-size: 250%
+}
+
+p {
+  font-size: 140%;
+  line-height: 150%;
+  color: #333;
+}
+
+.slide {
+  position: relative;
+  padding: 25vh 10%;
+  min-height: 100vh;
+  width: 100vw;
+  box-sizing: border-box;
+  box-shadow: 0 -1px 10px rgba(0, 0, 0, .7);
+	transform-style: inherit;
+}
 
 img {
-    border-radius: 10%;
-  }
+  position: absolute;
+  top: 50%;
+  left: 35%;
+  width: 320px;
+  height: 240px;
+  transform: translateZ(.25px) scale(.75) translateX(-94%) translateY(-100%) rotate(2deg);
+  padding: 10px;
+  border-radius: 5px;
+  background: rgba(240,230,220, .7);
+  box-shadow: 0 0 8px rgba(0, 0, 0, .7);
+}
+
+
+.title {
+  width: 50%;
+  padding: 5%;
+  border-radius: 5px;
+  background: rgba(240,230,220, .7);
+  box-shadow: 0 0 8px rgba(0, 0, 0, .7);
+}
+
+.slide:nth-child(2n) .title {
+  margin-left: 0;
+  margin-right: auto;
+}
+
+.slide:nth-child(2n+1) .title {
+  margin-left: auto;
+  margin-right: 0;
+}
+
+.slide, .slide:before {
+  background: 50% 50% / cover;  
+}
+
+.header {
+  text-align: center;
+  font-size: 175%;
+  color: #fff;
+  text-shadow: 0 2px 2px #000;
+}
+
+#title {
+  background-image: url("assets/agu.jpg");
+  z-index:2;
+}
+
+#title h1 {
+ transform: translateZ(.25px) scale(.75);
+ transform-origin: 50% 100%;
+ text-align: center;
+}
+
+#slide1_header h1 {
+  transform: translateZ(.25px) scale(.75);
+  transform-origin: 50% 100%;
+  text-align: center;
+  font-size: 175%;
+ }
+
+#slide1 {
+  background-color:#8FC0A9;
+  transform: translateZ(-1px) scale(1);
+}
+
+#slide2 {
+  background-image: url("https://picsum.photos/960/400");
+  z-index:2;
+}
+
+#slide3:before {
+  background-image: url("https://picsum.photos/980/600");
+  transform: translateZ(-1px) scale(2);
+}
+
+#slide4 {
+  background: #222;
+}
